pkg/check/testdata/ub/types/invalid/wrong-library-config-binding-type.ub
imports: {
  aws: 'github.com/acme/aws'
}
library-configs: {
  aws: {
    region:  42
    retries: 3
  }
}
resources: {
  bucket: aws.bucket {
    name:    'bucket'
    retries: 3
  }
}
